# group-preferences-splitter

./: .gitignore  LICENSE  README.md  main.py  preferences.xlsx  pyproject.toml
