[tool.poetry]
name = "group-preference-splitter"
version = "0.1.0"
description = ""
authors = ["Mike Barkmin <mike@barkmin.eu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
numpy = "^2.1.3"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
